Remove CI matrix

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -13,20 +13,17 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby-version: ['3.0']
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ${{ matrix.ruby-version }}
+        ruby-version: '3.0'
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Run tests
       run: COVERAGE=true bundle exec rspec
-    - name: Upload coverage results    
+    - name: Upload coverage results
       uses: actions/upload-artifact@master
       if: always()
       with:
