--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -3,9 +3,7 @@ verify_signatures: false
 PreCommit:
   RuboCop:
     enabled: true
-    command: ['bundle', 'exec', 'rubocop']
-    problem_on_unmodified_line: warn
-    on_warn: fail # Treat all warnings as failures
+    command: ['bundle', 'exec', 'standardrb']
 PrePush:
   RSpec:
     enabled: true
